--- a/.env.local.example
+++ b/.env.local.example
@@ -6,7 +6,7 @@ POSTGRES_HOST=
 POSTGRES_DATABASE=
 
 NEXTAUTH_URL=http://localhost:3000
-AUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+AUTH_SECRET=verysecretstuff # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 
 # https://next-auth.js.org/providers/github
 OAUTH_CLIENT_KEY=
