--- a/.env.local.example
+++ b/.env.local.example
@@ -9,5 +9,5 @@ NEXTAUTH_URL=http://localhost:3000
 AUTH_SECRET=verysecretstuff # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 
 # https://next-auth.js.org/providers/github
-OAUTH_CLIENT_KEY=
-OAUTH_CLIENT_SECRET=
+OAUTH_CLIENT_KEY="21d769fe695f5aab4e68"
+OAUTH_CLIENT_SECRET="88430c80f1366e6bae182543db99456df855e690"
